--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,8 +10,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 #JPA
 spring.jpa.database=postgresql
- #  spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=validate
+   spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
