--- a/src/main/resources/validation-messages.properties
+++ b/src/main/resources/validation-messages.properties
@@ -9,3 +9,11 @@ product.price.min=Precio no debe ser negativo
 product.stock.min=Stock no debe ser negativo
 product.active.not-blank=Estado es requerido
 product.category-id.not-blank=Categoría es requerido
+
+
+expense.name.not-blank=Nombre es requerido
+expense.name.not-null=Nombre es requerido
+expense.name.size=Nombre debe contener entre 3 y 70 carácteres
+expense.description.not-blank=Descripción es requerido
+expense.amount.min=Monto no debe ser negativo
+expense.date.not-blank=Fecha es requerido
