Refactor: Update methods to use generic classes and enhance transaction and DocumentType functionality

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ server.port=8085
 server.servlet.context-path=/store/v1/
 
 #MySQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/storedb3
+spring.datasource.url=jdbc:postgresql://localhost:5432/storedb
 spring.datasource.username=postgres
-spring.datasource.password=laweareptiliana
+spring.datasource.password=secret
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #JPA
