--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/api/v1/
 #MySQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/storedb
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=secret
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #JPA
