--- a/src/main/resources/validation-messages.properties
+++ b/src/main/resources/validation-messages.properties
@@ -17,3 +17,8 @@ expense.name.size=Nombre debe contener entre 3 y 70 carácteres
 expense.description.not-blank=Descripción es requerido
 expense.amount.min=Monto no debe ser negativo
 expense.date.not-blank=Fecha es requerido
+
+transactionDto.amount.not-null=Monto es requerido
+transactionDto.isIncome.not-null=El tipo de transacción es requerido
+transactionDto.description.not-null=La descripción es requerida
+transactionDto.date.not-null=La fecha es requerida
