agrega atributos a la entidad transaction y pide parametro booleano obligatorio en  controller

--- a/src/main/resources/validation-messages.properties
+++ b/src/main/resources/validation-messages.properties
@@ -22,3 +22,5 @@ transactionDto.amount.not-null=Monto es requerido
 transactionDto.isIncome.not-null=El tipo de transacción es requerido
 transactionDto.description.not-null=La descripción es requerida
 transactionDto.date.not-null=La fecha es requerida
+transactionDto.documentNumber.not-null = El número de documento es requerido
+transactionDto.socialReason.not-null = La razón social es requerida
