--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/store/v1/
 #MySQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/storedb
 spring.datasource.username=postgres
-spring.datasource.password=secret
+spring.datasource.password=laweareptiliana
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #JPA
